# comfyui-rust

./: .gitignore  Cargo.toml  start.sh  stop.sh
comfy-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
comfy-ui/src/: App.tsx  index.css
comfy-ui/src/api/: client.ts  websocket.ts
comfy-ui/src/components/agent/: AIAgent.tsx
comfy-ui/src/components/custom/: CustomNodeEditor.tsx  CustomNodePanel.tsx
comfy-ui/src/components/editor/: ContextMenu.tsx  GraphEditor.tsx  ProgressBar.tsx  Toolbar.tsx
comfy-ui/src/components/nodes/: ComfyNode.tsx  NoteNode.tsx  nodeColors.ts
comfy-ui/src/components/sidebar/: ImageGallery.tsx  LlmSettings.tsx  ModelManager.tsx  NodePanel.tsx  PropertyPanel.tsx  WorkflowManager.tsx
comfy-ui/src/dag/: index.ts
comfy-ui/src/hooks/: useInitApp.ts  useWebSocket.ts
comfy-ui/src/plugins/: manager.ts
comfy-ui/src/store/: customNodes.ts  models.ts  workflow.ts
comfy-ui/src/types/: api.ts  customNode.ts
crates/comfy-api/: Cargo.toml
crates/comfy-api/src/: agent.rs  config.rs  database.rs  download_tracker.rs  error.rs  images.rs  lib.rs  llm.rs  model_downloads.rs  model_knowledge.rs  queue.rs  routes.rs  server.rs  state.rs  worker.rs  ws.rs
crates/comfy-api/tests/: api_tests.rs
crates/comfy-core/: Cargo.toml
crates/comfy-core/src/: lib.rs  workflow.rs
crates/comfy-core/src/graph/: dynamic_prompt.rs  edge.rs  execution_list.rs  graph_builder.rs  mod.rs  node.rs  topological_sort.rs
crates/comfy-core/src/validation/: mod.rs  type_check.rs
crates/comfy-core/tests/: integration_tests.rs
crates/comfy-executor/: Cargo.toml
crates/comfy-executor/src/: builtin_nodes.rs  controlnet.rs  error.rs  execution_context.rs  executor.rs  lib.rs  mask.rs  registry.rs
crates/comfy-executor/tests/: executor_tests.rs
crates/comfy-inference/: Cargo.toml  build.rs
crates/comfy-inference/src/: backend.rs  cli.rs  error.rs  ffi.rs  image.rs  lib.rs  local.rs  params.rs  remote.rs  types.rs
crates/comfy-inference/tests/: inference_tests.rs
custom_nodes/: Custom_c.json
docs/: ControlNet_Preprocessors.md  Mask_node.md
