[package]
name = "comfy-api"
version = "0.1.0"
edition = "2021"
description = "REST/WebSocket API server for ComfyUI-Rust"

[dependencies]
comfy-core = { path = "../comfy-core" }
comfy-inference = { path = "../comfy-inference", default-features = false }
comfy-executor = { path = "../comfy-executor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"

[features]
default = []
local = ["comfy-inference/local", "comfy-executor/local"]
remote = ["comfy-inference/remote", "comfy-executor/remote"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1"
