[package]
name = "comfy-core"
version = "0.1.0"
edition = "2021"
description = "Core DAG execution engine for ComfyUI-Rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
