[package]
name = "comfy-inference"
version = "0.1.0"
edition = "2021"
description = "Inference backend for ComfyUI-Rust, integrating stable-diffusion-cpp via FFI"

[dependencies]
comfy-core = { path = "../comfy-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
png = "0.17"
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
base64 = { version = "0.22", optional = true }
tracing = "0.1"

[build-dependencies]
cc = "1"
cmake = "0.1"

[features]
default = []
local = []
local-build = ["local"]
remote = ["reqwest", "base64"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
